<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Dashboard">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:background="@color/primaryColor"
        app:menu="@menu/search_menu"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_below="@+id/toolbar"
        android:background="@color/white"
        android:gravity="center"
        android:layout_centerHorizontal = "true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/pick_location"
        android:padding="5dp"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        app:drawableEndCompat="@drawable/location_icon"
        app:drawableTint="@color/black"
        android:text="@string/choose_location"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>

    <ListView
        android:background="@color/white"
        android:id="@+id/listView"
        android:scrollIndicators="right"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayout"
        android:layout_above="@+id/make_request_button"/>

    <TextView
        android:id="@+id/make_request_button"
        android:text="@string/make_a_request"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@color/primaryColor"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</RelativeLayout>